--- a/covers/templates/covers/guitarcovers.html
+++ b/covers/templates/covers/guitarcovers.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
     <meta name="generator" content="Hugo 0.87.0">
-    <title>Raghav's Piano Covers</title>
+    <title>Raghav's Guitar Covers</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/5.1/examples/album/">
 
@@ -69,7 +69,7 @@
 <main>
   <div class="container">
 
-    <h1 class="text-center pt-3">Piano Covers</h1>
+    <h1 class="text-center pt-3">Guitar Covers</h1>
     <br />
     <br />
     <h3>All covers</h3>
@@ -77,7 +77,7 @@
 
 
     {% for cover in covers.all %}
-      {% if cover.cover_type == 'pianocovers' %}
+      {% if cover.cover_type == 'guitarcovers' %}
         <a href="{% url 'coverdetail' cover.id %}"><h4>{{ cover.title }}</h4></a>
         <br />
         <img clas="img-fluid" src= '{{ cover.thumbnail.url }}' height="200" width="300" />
