added projects app and cleaned up some html

--- a/projects/templates/projects/projects.html
+++ b/projects/templates/projects/projects.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
     <meta name="generator" content="Hugo 0.87.0">
-    <title>{{ blog.title }}</title>
+    <title>Raghav's Projects</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/5.1/examples/album/">
     <link href="navbar-top-fixed.css" rel="stylesheet">
@@ -59,31 +59,31 @@
             <div class="navbar-nav ms-auto">
               <a class="nav-link" href="{% static 'Raghav Tech Resume 2:21.pdf' %} ">Resume</a>
               <a class="nav-link" href="https://www.linkedin.com/in/raghav-bali-978908123/">LinkedIn</a>
-              <a class="nav-link active" href="{% url 'allblogs' %}">Blog</a>
+              <a class="nav-link" href="{% url 'allblogs' %}">Blog</a>
             </div>
           </div>
         </div>
       </nav>
     </header>
 
-
 <br />
 <br />
 <main>
   <div class="container">
 
+    <h1 class="text-center pt-3">Projects</h1>
+    <br />
+    <br />
+    <h3>All Projects</h3>
+    <hr />
 
-    <h1 class='text-center pt-3'>{{ cover.title }}</h1>
+
+    {% for project in projects.all %}
+    <a href="{{ project.file.url }}"><h4>{{ project.title }}</h4></a>
     <br />
-    <div class='mx-auto' style="width: 800px;">
-      <video class="center" width="800" controls>
-        <source src="{{ cover.performance.url }}" type="video/mp4">
-          Your browser does not support HTML5 video.
-      </video>
-    </div>
+    <p>{{ project.description|linebreaksbr }}</p>
     <br />
-    <p>{{ blog.body }}</p>
-    <br />
+    {% endfor %}
   </div>
 </main>
 
