--- a/blog/templates/blog/allblogs.html
+++ b/blog/templates/blog/allblogs.html
@@ -11,7 +11,7 @@
     <title>Raghav's Blog'</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/5.1/examples/album/">
-
+    <link href="navbar-top-fixed.css" rel="stylesheet">
 
 
     <!-- Bootstrap core CSS -->
@@ -49,7 +49,7 @@
   <body>
 
     <header>
-      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-dark">
         <div class="container-fluid">
           <a class="navbar-brand" href="{%  url 'home' %}">Raghav Bali</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -66,6 +66,8 @@
       </nav>
     </header>
 
+<br />
+<br />
 <main>
   <div class="container">
 
