--- a/blog/templates/blog/blogdetail.html
+++ b/blog/templates/blog/blogdetail.html
@@ -11,7 +11,7 @@
     <title>{{ blog.title }}</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/5.1/examples/album/">
-
+    <link href="navbar-top-fixed.css" rel="stylesheet">
 
 
     <!-- Bootstrap core CSS -->
@@ -49,7 +49,7 @@
   <body>
 
     <header>
-      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-dark">
         <div class="container-fluid">
           <a class="navbar-brand" href="{%  url 'home' %}">Raghav Bali</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -77,7 +77,7 @@
       <img class="img-fluid" src= '{{ blog.image.url }}'/>
     </div>
     <br />
-    <p>{{ blog.body }}</p>
+    <p>{{ blog.body|linebreaksbr }}</p>
     <br />
   </div>
 </main>
