Latest stable version of site

--- a/blog/templates/blog/blogdetail.html
+++ b/blog/templates/blog/blogdetail.html
@@ -66,6 +66,8 @@
       </nav>
     </header>
 
+<br />
+<br />
 <main>
   <div class="container">
 
@@ -80,6 +82,8 @@
     <p>{{ blog.body|linebreaksbr }}</p>
     <br />
   </div>
+
+<a href="/./blog" class="btn btn-dark mx-4">← Back</a>
 </main>
 
 <footer class="text-muted py-5">
