--- a/covers/templates/covers/pianocovers.html
+++ b/covers/templates/covers/pianocovers.html
@@ -57,7 +57,7 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav ms-auto">
-              <a class="nav-link" href="{% static 'Raghav Tech Resume 2:21.pdf' %} ">Resume</a>
+              <a class="nav-link" href="{% static 'Raghav Resume.pdf' %} ">Resume</a>
               <a class="nav-link" href="https://www.linkedin.com/in/raghav-bali-978908123/">LinkedIn</a>
               <a class="nav-link" href="{% url 'allblogs' %}">Blog</a>
             </div>
