--- a/jobs/templates/jobs/base.html
+++ b/jobs/templates/jobs/base.html
@@ -17,15 +17,7 @@
     <!-- Bootstrap core CSS -->
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
-    <link href="navbar-top-fixed.css" rel="stylesheet">
 
-    <!-- Favicons -->
-<link rel="apple-touch-icon" href="/docs/5.1/assets/img/favicons/apple-touch-icon.png" sizes="180x180">
-<link rel="icon" href="/docs/5.1/assets/img/favicons/favicon-32x32.png" sizes="32x32" type="image/png">
-<link rel="icon" href="/docs/5.1/assets/img/favicons/favicon-16x16.png" sizes="16x16" type="image/png">
-<link rel="manifest" href="/docs/5.1/assets/img/favicons/manifest.json">
-<link rel="mask-icon" href="/docs/5.1/assets/img/favicons/safari-pinned-tab.svg" color="#7952b3">
-<link rel="icon" href="/docs/5.1/assets/img/favicons/favicon.ico">
 <meta name="theme-color" content="#7952b3">
 
 
@@ -59,7 +51,7 @@
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav ms-auto">
           <a class="nav-link" href="{% static 'Raghav Resume.pdf' %} ">Resume</a>
-          <a class="nav-link" href="https://www.linkedin.com/in/raghav-bali-978908123/">LinkedIn</a>
+          <a class="nav-link" target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/raghav-bali/">LinkedIn</a>
           <a class="nav-link" href="{% url 'allblogs' %}">Blog</a>
         </div>
       </div>
