--- a/jobs/templates/jobs/base.html
+++ b/jobs/templates/jobs/base.html
@@ -41,6 +41,7 @@
   </head>
   <body>
 
+{% block navbar %}
 <header>
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-dark">
     <div class="container-fluid">
@@ -52,12 +53,13 @@
         <div class="navbar-nav ms-auto">
           <a class="nav-link" href="{% static 'Raghav Resume.pdf' %} ">Resume</a>
           <a class="nav-link" target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/raghav-bali/">LinkedIn</a>
-          <a class="nav-link" href="{% url 'allblogs' %}">Blog</a>
+          <a class="nav-link {% if request.path|slice:":5" == '/blog' %} active {% endif %}" href="{% url 'allblogs' %}">Blog</a>
         </div>
       </div>
     </div>
   </nav>
 </header>
+{% endblock %}
 
 <br />
 <br />
