--- a/jobs/templates/jobs/base.html
+++ b/jobs/templates/jobs/base.html
@@ -51,7 +51,7 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav ms-auto">
-          <a class="nav-link" href="{% static 'Raghav Resume.pdf' %} ">Resume</a>
+          <a class="nav-link" target="_blank" rel="noopener noreferrer" href="{% static 'Raghav Resume.pdf' %} ">Resume</a>
           <a class="nav-link" target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/raghav-bali/">LinkedIn</a>
           <a class="nav-link {% if request.path|slice:":5" == '/blog' %} active {% endif %}" href="{% url 'allblogs' %}">Blog</a>
         </div>
