--- a/jobs/templates/jobs/home.html
+++ b/jobs/templates/jobs/home.html
@@ -15,7 +15,7 @@
         <p>
           <a href="mailto:raghavbali.12@gmail.com" class="btn btn-dark my-2">Email me</a>
         </p>
-        <img src="{% static 'raghav.jpg' %}" class='img-fluid' height='200' width='300'/>
+        <img src="{% static 'raghav.JPG' %}" class='img-fluid' height='200' width='300'/>
       </div>
     </div>
   </section>
