--- a/jobs/templates/jobs/base.html
+++ b/jobs/templates/jobs/base.html
@@ -1,7 +1,7 @@
 
 <!doctype html>
 <html lang="en">
-{% load staticfiles %}
+{% load static %}
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -53,7 +53,7 @@
         <div class="navbar-nav ms-auto">
           <a class="nav-link" target="_blank" rel="noopener noreferrer" href="{% static 'Raghav Resume.pdf' %} ">Resume</a>
           <a class="nav-link" target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/raghav-bali/">LinkedIn</a>
-          <a class="nav-link {% if request.path|slice:":5" == '/blog' %} active {% endif %}" href="{% url 'allblogs' %}">Blog</a>
+          <a class="nav-link" target="_blank" rel="noopener noreferrer" href="https://github.com/raghavbali12">GitHub</a>
         </div>
       </div>
     </div>
